--- a/index.html
+++ b/index.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TipToken - The Future of Tipping</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        h1 { color: #3498db; }
-        .links { margin-top: 20px; }
-        .links a { display: block; margin: 10px; text-decoration: none; color: #2c3e50; font-weight: bold; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to TipToken 🚀</h1>
-    <p>The ultimate tipping solution on Solana!</p>
-    
-    <div class="links">
-        <a href="https://discord.gg/WrXSyWux" target="_blank">Join us on Discord</a>
-        <a href="https://t.me/tipcoinsolana" target="_blank">Join us on Telegram</a>
-        <a href="https://x.com/TipTokensolana?t=fagz1I6yd6R2DQ51TgSnDQ&s=09" target="_blank">Follow us on X</a>
+    <div class="container">
+        <header>
+            <h1>🚀 TipToken</h1>
+            <p>The Future of Tipping on Solana</p>
+        </header>
+
+        <section class="hero">
+            <h2>Fast | Secure | Decentralized</h2>
+            <p>Join our movement and change the way we tip in Web3.</p>
+            <a href="https://t.me/tipcoinsolana" class="btn">Join Telegram</a>
+        </section>
+
+        <section class="info">
+            <h3>Stay Connected</h3>
+            <p>Be part of our growing community!</p>
+            <div class="links">
+                <a href="https://discord.gg/WrXSyWux">Discord</a>
+                <a href="https://t.me/tipcoinsolana">Telegram</a>
+                <a href="https://x.com/TipTokensolana?t=fagz1I6yd6R2DQ51TgSnDQ&s=09">Twitter</a>
+            </div>
+        </section>
+
+        <footer>
+            <p>© 2025 TipToken - All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
