--- a/tokencreator/index.html
+++ b/tokencreator/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create SPL Token - TokenCrafter</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.5/web3.min.js"></script>
+    <script defer src="tokencrafter.js"></script>
+</head>
+<body>
+    <h1>TokenCrafter - Create Your Solana Token</h1>
+    
+    <button onclick="connectWallet()">Connect Wallet</button>
+    <p id="walletAddress"></p>
+    
+    <form id="tokenForm">
+        <input type="text" id="name" placeholder="Token Name" required>
+        <input type="text" id="symbol" placeholder="Symbol" required>
+        <input type="number" id="decimals" placeholder="Decimals (ex: 9)" required>
+        <input type="number" id="supply" placeholder="Total Supply" required>
+        <button type="submit">Create Token</button>
+    </form>
 
+    <p id="status"></p>
+</body>
+</html>
