--- a/tokencreator/index.html
+++ b/tokencreator/index.html
@@ -6,17 +6,16 @@
     <title>TokenCrafter - Create SPL Tokens</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tokencrafter.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.5/web3.min.js"></script>
     <script defer src="tokencrafter.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>🚀 TokenCrafter</h1>
         <p>Create your own SPL Token on Solana</p>
-        
-        <button id="connectBtn" onclick="connectWallet()">🔗 Connect Wallet</button>
+
+        <button id="connectBtn">🔗 Connect Wallet</button>
         <p id="walletAddress"></p>
-        
+
         <form id="tokenForm">
             <input type="text" id="name" placeholder="Token Name" required>
             <input type="text" id="symbol" placeholder="Symbol" required>
@@ -26,6 +25,10 @@
         </form>
 
         <p id="status"></p>
+
+        <a href="https://t.me/broiscoding" target="_blank" class="telegram-btn">
+            📢 Join Our Telegram
+        </a>
     </div>
 </body>
 </html>
