--- a/index.html
+++ b/index.html
@@ -3,36 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TipToken - The Future of Tipping</title>
+    <title>BroisCoding - Web Development & Coding Solutions</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>🚀 TipToken</h1>
-            <p>The Future of Tipping on Solana</p>
-        </header>
+    <div class="cyber-overlay"></div>
+    
+    <header>
+        <nav>
+            <div class="logo">
+                <span class="neon-text">Brois</span>
+                <span class="cyber-text">Coding</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <section class="hero">
-            <h2>Fast | Secure | Decentralized</h2>
-            <p>Join our movement and change the way we tip in Web3.</p>
-            <a href="https://t.me/tipcoinsolana" class="btn">Join Telegram</a>
-        </section>
-
-        <section class="info">
-            <h3>Stay Connected</h3>
-            <p>Be part of our growing community!</p>
-            <div class="links">
-                <a href="https://discord.gg/WrXSyWux">Discord</a>
-                <a href="https://t.me/tipcoinsolana">Telegram</a>
-                <a href="https://x.com/TipTokensolana?t=fagz1I6yd6R2DQ51TgSnDQ&s=09">Twitter</a>
+    <main>
+        <section id="home" class="hero">
+            <div class="glitch-container">
+                <h1 class="glitch" data-text="Welcome to the Future">Welcome to the Future</h1>
+            </div>
+            <p class="cyber-subtitle">Transforming Ideas into Digital Reality</p>
+            <div class="tech-circles">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </section>
 
-        <footer>
-            <p>© 2025 TipToken - All rights reserved.</p>
-        </footer>
-    </div>
+        <section id="services" class="services">
+            <h2 class="section-title">Services</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="card-inner">
+                        <i class="fas fa-code"></i>
+                        <h3>Web Development</h3>
+                        <p>Custom websites built with modern technologies</p>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="card-inner">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h3>Responsive Design</h3>
+                        <p>Mobile-first approach for all devices</p>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="card-inner">
+                        <i class="fas fa-cogs"></i>
+                        <h3>Custom Solutions</h3>
+                        <p>Tailored coding solutions for your needs</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio" class="portfolio">
+            <h2 class="section-title">Portfolio</h2>
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="path/to/smartpi-thumbnail.jpg" alt="SmartPi Project">
+                    <div class="portfolio-overlay">
+                        <h3>SmartPi.xyz</h3>
+                        <p>IoT Solutions Platform</p>
+                        <a href="https://smartpi.xyz" target="_blank" class="cyber-button">Visit Site</a>
+                    </div>
+                </div>
+                <!-- Add more portfolio items here -->
+            </div>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2 class="section-title">Connect with Me</h2>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <a href="mailto:ro.petreamihai@gmail.com?subject=Web Development Project&body=Hello BroisCoding,%0D%0A%0D%0AI am interested in working with you on:%0D%0A%0D%0A- Project type:%0D%0A- Timeline:%0D%0A- Budget range:%0D%0A%0D%0APlease contact me back at your earliest convenience.%0D%0A%0D%0ABest regards," class="contact-button email-button">
+                        <i class="fas fa-envelope"></i>
+                        <span>Send Email</span>
+                    </a>
+                    <a href="https://wa.me/40767442098?text=Hello BroisCoding! I'm interested in discussing a web development project with you." class="contact-button whatsapp-button">
+                        <i class="fab fa-whatsapp"></i>
+                        <span>Chat on WhatsApp</span>
+                    </a>
+                </div>
+                <div class="matrix-animation">
+                    <div class="matrix-rain"></div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 BroisCoding. All rights reserved.</p>
+            <div class="social-links">
+                <!-- Add your social media links here -->
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/your-kit-code.js"></script>
 </body>
 </html>
 
